--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aselsan_case",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -23,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
