--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "^2.1.3",
     "react-toastify": "^7.0.4",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
